ALEX: change security service

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,21 +3,39 @@ spring:
     url: jdbc:mysql://localhost:3306/perspektive
     username: root
     password: 1Qazimodo237!
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     open-in-view: false
-    hibernate:
-      ddl-auto: create-drop
 
-#  sql:
-#    init:
-#      mode: always
-#      continue-on-error: false
-#      schema-locations:
-#        - classpath:init/del.sql
-#        - classpath:init/schema_user.sql
-#        - classpath:init/schema_security.sql
-#        - classpath:init/schema_projects.sql
-#        - classpath:init/init.sql
+  sql:
+    init:
+      mode: always
+      continue-on-error: false
+      schema-locations:
+        - classpath:schema.sql
+        - classpath:init.sql
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: asset.track.pro@gmail.com
+    password: khzv asqz sqcu rlxv
+    properties:
+      mail:
+        debug: false
+        transport:
+          protocol: smtp
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 server:
   port: 9091
+  address: 0.0.0.0
+
+logging:
+  level:
+    root: INFO
+    com.alex.asset: DEBUG
+springdoc:
+  override-with-generic-response: false
